2008-04-23 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	Fixed 1919970: Provider process not terminated after idle 
	(w/ LocalConnect) (patch by Luong Nguyen-Duy)

2008-04-17 Gary Readler  <gdr@us.ibm.com>

	* cimcClientSfcbLocal.c:
        Reversed changes from 1879319; was causing a segfault for certain
        testcases

2008-04-16 Gary Readler  <gdr@us.ibm.com>

	* cimcClientSfcbLocal.c configure.ac enumeration.c providerMgr.c providerMgr.h
	  sfcbenum.h :
	added 1828585: Large Volume Support (LocalConnect)

2008-04-15 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cmpift.h, context.c, instance.c:
	Fixed compiler warnings introduced by 1828500 fix

2008-04-14 Gary Readler  <gdr@us.ibm.com>

	* array.c:
	Fixed 1942130: segfault when array increased by CMSetArrayElementAt

2008-04-09 Sean Swehla
	* Makefile.am, brokerUpc.c, cmpidt.h, cmpift.h, cmpimacs.h, cmpios.h, 
	cmpipl.h, fileRepository.c, fileRepository.h, internalProvider.c, 
	interopProvider.c, providerDrv.c, qualifierProvider.c
	Added 1828500: CMPI 2.0 support
	
2008-04-08 Chris Buccella  <chris@thefoot.local>

	* array.c:
	Fixed 1893302: New CMPI arrays not tracked
	(patch by Tim Potter)
	
2008-04-07 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* sfcBroker.c, trace.h, trace.c:
	Fixed 1875122: sfcb colorized traces

2008-04-05 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimslp.c, cimslp.h, cimslpCMPI.c:
	SLP support for 1930758
	
2008-04-02 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	Fixed 1928685: sfcb httpAdapter memory leak while authenticating
	(patch by Rajib Saha)

2008-04-01 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* profileProvider.c, Makefile.am, profileMgr.c, default.reg, interop.mof:
	Added 1930758: Profile Registration support
	
2008-03-14 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c, providerMgr.c:
	Fixed 1914551: sfcb file descriptor leaks
	(patch by J. Vinodhini)
